--- a/Product_Pages/peach-sunset.html
+++ b/Product_Pages/peach-sunset.html
@@ -7,25 +7,35 @@
     <meta name="keywords" content="Lashae Glamour, nails, luxury">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Made to Order | Lashae Glamour</title>
+    <title>Peach Sunset | Lashaè Glamour</title>
 
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
     <!-- Css Styles -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="css/themify-icons.css" type="text/css">
-    <link rel="stylesheet" href="css/elegant-icons.css" type="text/css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
-    <link rel="stylesheet" href="css/nice-select.css" type="text/css">
-    <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
-    <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="../css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="../css/themify-icons.css" type="text/css">
+    <link rel="stylesheet" href="../css/elegant-icons.css" type="text/css">
+    <link rel="stylesheet" href="../css/owl.carousel.min.css" type="text/css">
+    <link rel="stylesheet" href="../css/nice-select.css" type="text/css">
+    <link rel="stylesheet" href="../css/jquery-ui.min.css" type="text/css">
+    <link rel="stylesheet" href="../css/slicknav.min.css" type="text/css">
+    <link rel="stylesheet" href="../css/style.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+
+    <!-- Favicon image -->
+    <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="../img/favicon/site.webmanifest">
+    <link rel="mask-icon" href="../img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#2b5797">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
+
     <!-- Header Section Begin -->
     <header class="header-section">
         <div class="header-top">
@@ -39,14 +49,14 @@
                 </div>
                 <div class="ht-right">
                     <div class="lan-selector">
-                        <select class="language_drop" name="countries" id="countries" style="width:300px;">
-                            <option value='yt' data-image="img/flag-1.jpg" data-imagecss="flag yt"
-                                data-title="English">English</option>
-                        </select>
+                        <!-- <option> *Maybe add banner for discount code*</option> -->
                     </div>
                     <div class="top-social">
-                        <a href="#"><i class="ti-instagram"></i></a>
-                        <a href="#"><i class="fab fa-tiktok"></i></a>
+                        <a href="https://www.instagram.com/lashaeglamour" target="_blank" rel="noopener noreferrer"><i class="ti-instagram"></i></a>
+                        <a href="https://www.tiktok.com/@lashaeglamour" target="_blank" rel="noopener noreferrer"><i class="fab fa-tiktok"></i></a>
+                        <a href="http://www.pinterest.com/lashaeglamour" target="_blank" rel="noopener noreferrer"><i class="ti-pinterest"></i></a>
+                        <!-- <a href="#"><i class="ti-facebook"></i></a>
+                        <a href="#"><i class="ti-twitter-alt"></i></a> -->
                     </div>
                 </div>
             </div>
@@ -56,12 +66,13 @@
                 <div class="row">
                     <div class="col-lg-2 col-md-2">
                         <div class="logo">
-                            <a href="./index.html">
-                                <img src="img/logo.png" alt="">
+                            <a href="../index.html">
+                                <img src="../img/logo.png" alt="">
                             </a>
                         </div>
                     </div>
 
+                    <!-- Button for SearchBar -->
                     <div class="col-lg-7 col-md-7">
                         <div id="my-search-60464127"></div>
                         <div>
@@ -69,6 +80,7 @@
                         <script type="text/javascript"> xSearch("id=my-search-60464127"); </script>
                         </div>
                     </div>
+                    <!-- Button for SearchBar -->
 
                     <div class="col-lg-3 text-right col-md-3">
                         <ul class="nav-right">
@@ -92,20 +104,19 @@
                         <i class="ti-menu"></i>
                         <span>Categories</span>
                         <ul class="depart-hover">
-                            <li><a href="#">Lashae Essentials</a></li>
-                            <li><a href="#">Glitz & Glam</a></li>
-                            <li><a href="#">LG Luxxe</a></li>
-
+                            <li><a href="./shop.html">Lashaè Essentials</a></li>
+                            <li><a href="./shop.html">LG Luxe</a></li>
+                            <li><a href="../bridal-nails.html">Bridal Nails</a></li>
                         </ul>
                     </div>
                 </div>
                 <nav class="nav-menu mobile-menu">
                     <ul>
-                        <li><a href="./ReadyToShip.html">Ready to Ship</a></li>
-                        <li><a href="./MadeToOrder.html">Made to Order</a></li>
-                        <li><a href="CustomOrders.html">Custom Orders</a></li>
-                        <li><a href="./faq.html">FAQ</a></li>
-                        <li><a href="./contact.html">Contact</a></li>
+                        <li><a href="../ready-to-ship.html">Ready to Ship</a></li>
+                        <li><a href="../made-to-order.html">Made to Order</a></li>
+                        <li><a href="../custom-sets.html">Custom Sets</a></li>
+                        <li><a href="../faq.html">FAQ</a></li>
+                        <li><a href="../contact.html">Contact</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -122,15 +133,15 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumb-text product-more">
-                        <a href="./home.html"><i class="fa fa-home"></i> Home</a>
-                        <a href="./MadeToOrder.html">Made to Order</a>
+                        <a href="../index.html"><i class="fa fa-home"></i> Home</a>
+                        <a href="../made-to-order.html">Made to Order</a>
                         <span>Peach Sunset</span>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Breadcrumb Section Begin -->
+    <!-- Breadcrumb Section End -->
 
     <!-- Product Shop Section Begin -->
     <section class="product-shop spad page-details">
@@ -183,85 +194,88 @@
     <!-- Product Shop Section End -->
 
 
-
-    <!-- Footer Section Begin -->
-    <footer class="footer-section">
+   <!-- Footer Section Begin -->
+   <footer class="footer-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3">
+                <div class="footer-left">
+                    <div class="footer-logo">
+                        <a href="../index.html"><img src="../img/footer-logo.png" alt=""></a>
+                    </div>
+                    <div class="footer-social">
+                        <a href="https://www.instagram.com/lashaeglamour" target="_blank" rel="noopener noreferrer"><i class="ti-instagram"></i></a>
+                        <a href="https://www.tiktok.com/@lashaeglamour" target="_blank" rel="noopener noreferrer"><i class="fab fa-tiktok"></i></a>
+                        <a href="http://www.pinterest.com/lashaeglamour" target="_blank" rel="noopener noreferrer"><i class="ti-pinterest"></i></a>
+                        <!-- <a href="#"><i class="ti-facebook"></i></a>
+                        <a href="#"><i class="ti-twitter-alt"></i></a> -->
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-2 offset-lg-1">
+                <div class="footer-widget">
+                    <h5>About Us</h5>
+                    <ul>
+                        <li><a href="../lsglm-story.html">Our Story</a></li>
+                        <li><a href="../packaging.html">Packaging</li>
+                        <li><a href="../Legal_Docs/terms-of-use-policy.html">Terms of Use</a></li>
+                        <li><a href="../Legal_Docs/terms-of-sale-policy.html">Terms of Sale</a></li>
+                        <li><a href="../Legal_Docs/privacy-policy.html">Privacy Policy</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-lg-2">
+                <div class="footer-widget">
+                    <h5>Customer Service</h5>
+                    <ul>
+                        <li><a href="../contact.html">Contact Us</li>
+                        <li><a href="../Legal_Docs/covid-policy.html">Covid-19</a></li>
+                        <li><a href="../faq.html">FAQ</a></li>
+                        <li><a href="../faq.html">Delivery</a></li>
+                        <li><a href="../faq.html">Returns</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="newslatter-item">
+                    <h5>Join our newsletter!</h5>
+                    <p>Get E-mail updates about our latest nails and exclusive offers.</p>
+                    <form action="#" class="subscribe-form">
+                        <input type="text" placeholder="Enter Your Mail">
+                        <button type="button">Subscribe</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="copyright-reserved">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3">
-                    <div class="footer-left">
-                        <div class="footer-logo">
-                            <a href="#"><img src="img/footer-logo.png" alt=""></a>
-                        </div>
-                        <div class="footer-social">
-                            <a href="#"><i class="ti-instagram"></i></a>
-                            <a href="#"><i class="fab fa-tiktok"></i></a>
-                        </div>
+                <div class="col-lg-12">
+                    <div class="copyright-text">
+                        Copyright &copy; <script>document.write(new Date().getFullYear());</script> Lashaè Glamour
                     </div>
-                </div>
-                <div class="col-lg-2 offset-lg-1">
-                    <div class="footer-widget">
-                        <h5>About Us</h5>
-                        <ul>
-                            <li><a href="#">Our Story</a></li>
-                            <li><a href="./contact.html">Packaging</li>
-                            <li><a href="#">Terms of Service</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-2">
-                    <div class="footer-widget">
-                        <h5>Customer Service</h5>
-                        <ul>
-                            <li><a href="./contact.html">Contact</li>
-                            <li><a href="#">Covid-19</a></li>
-                            <li><a href="./faq.html">FAQ</a></li>
-                            <li><a href="#">Delivery</a></li>
-                            <li><a href="#">Returns</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="newslatter-item">
-                        <h5>Join our newsletter!</h5>
-                        <p>Get E-mail updates about our latest nails and exclusive offers.</p>
-                        <form action="#" class="subscribe-form">
-                            <input type="text" placeholder="Enter Your Mail">
-                            <button type="button">Subscribe</button>
-                        </form>
+                    <div class="payment-pic">
+                        <img src="../img/payment-method.png" alt="">
                     </div>
                 </div>
             </div>
         </div>
-        <div class="copyright-reserved">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="copyright-text">
-                            Copyright &copy; <script>document.write(new Date().getFullYear());</script> Lashae Glamour
-                        </div>
-                        <div class="payment-pic">
-                            <img src="img/payment-method.png" alt="">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <!-- Footer Section End -->
+    </div>
+</footer>
+<!-- Footer Section End -->
 
     <!-- Js Plugins -->
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery-ui.min.js"></script>
-    <script src="js/jquery.countdown.min.js"></script>
-    <script src="js/jquery.nice-select.min.js"></script>
-    <script src="js/jquery.zoom.min.js"></script>
-    <script src="js/jquery.dd.min.js"></script>
-    <script src="js/jquery.slicknav.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../js/jquery-3.3.1.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/jquery-ui.min.js"></script>
+    <script src="../js/jquery.countdown.min.js"></script>
+    <script src="../js/jquery.nice-select.min.js"></script>
+    <script src="../js/jquery.zoom.min.js"></script>
+    <script src="../js/jquery.dd.min.js"></script>
+    <script src="../js/jquery.slicknav.js"></script>
+    <script src="../js/owl.carousel.min.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 
 </html>
