--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,9 @@
     <meta name="keywords" content="Lashae Glamour, nails, luxury">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Press on Nails | Lashae Glamour</title>
+    <title>Contact | Lashaè Glamour</title>
 
-    <!-- Google Font -->
+    <!-- Font -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
     <!-- Css Styles -->
@@ -23,6 +23,15 @@
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+
+    <!-- Favicon image -->
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./img/favicon/site.webmanifest">
+    <link rel="mask-icon" href="./img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#2b5797">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -45,8 +54,11 @@
                         </select>
                     </div>
                     <div class="top-social">
-                        <a href="#"><i class="ti-instagram"></i></a>
-                        <a href="#"><i class="fab fa-tiktok"></i></a>
+                        <a href="https://www.instagram.com/lashaeglamour" target="_blank" rel="noopener noreferrer"><i class="ti-instagram"></i></a>
+                        <a href="https://www.tiktok.com/@lashaeglamour" target="_blank" rel="noopener noreferrer"><i class="fab fa-tiktok"></i></a>
+                        <a href="http://www.pinterest.com/lashaeglamour" target="_blank" rel="noopener noreferrer"><i class="ti-pinterest"></i></a>
+                        <!-- <a href="#"><i class="ti-facebook"></i></a>
+                        <a href="#"><i class="ti-twitter-alt"></i></a> -->
                     </div>
                 </div>
             </div>
@@ -62,6 +74,7 @@
                         </div>
                     </div>
 
+                    <!-- Button for SearchBar -->
                     <div class="col-lg-7 col-md-7">
                         <div id="my-search-60464127"></div>
                         <div>
@@ -69,6 +82,7 @@
                         <script type="text/javascript"> xSearch("id=my-search-60464127"); </script>
                         </div>
                     </div>
+                    <!-- Button for SearchBar -->
 
                     <div class="col-lg-3 text-right col-md-3">
                         <ul class="nav-right">
@@ -92,22 +106,17 @@
                         <i class="ti-menu"></i>
                         <span>Categories</span>
                         <ul class="depart-hover">
-                            <li><a href="#">Lashae Collection</a></li>
-                            <li><a href="#">Glitz & Glam</a></li>
-                            <li><a href="#">Underwear</a></li>
-                            <li><a href="#">Kid's Clothing</a></li>
-                            <li><a href="#">Brand Fashion</a></li>
-                            <li><a href="#">Accessories/Shoes</a></li>
-                            <li><a href="#">Luxury Brands</a></li>
-                            <li><a href="#">Brand Outdoor Apparel</a></li>
+                            <li><a href="./shop.html">Lashaè Essentials</a></li>
+                            <li><a href="./shop.html">LG Luxe</a></li>
+                            <li><a href="./shop.html">Bridal Nails</a></li>
                         </ul>
                     </div>
                 </div>
                 <nav class="nav-menu mobile-menu">
                     <ul>
-                        <li><a href="./index.html">Made to Order</a></li>
-                        <li><a href="./shop.html">Ready to Ship</a></li>
-                        <li><a href="./product.html">Custom Orders</a></li>
+                        <li><a href="./ready-to-ship.html">Ready to Ship</a></li>
+                        <li><a href="./made-to-order.html">Made to Order</a></li>
+                        <li><a href="./custom-sets.html">Custom Sets</a></li>
                         <li><a href="./faq.html">FAQ</a></li>
                         <li><a href="./contact.html">Contact</a></li>
                             </ul>
@@ -137,7 +146,7 @@
 
     <!-- NAIL PATTERN GO HERE Section Begin -->
 
-    <!-- NAIL PATTERN GO HERE Section Begin -->
+    <!-- NAIL PATTERN GO HERE Section End -->
 
     <!-- Contact Section Begin -->
     <section class="contact-section spad">
@@ -194,6 +203,9 @@
                         <div class="footer-social">
                             <a href="#"><i class="ti-instagram"></i></a>
                             <a href="#"><i class="fab fa-tiktok"></i></a>
+                            <a href="#"><i class="ti-pinterest"></i></a>
+                            <!-- <a href="#"><i class="ti-facebook"></i></a>
+                            <a href="#"><i class="ti-twitter-alt"></i></a> -->
                         </div>
                     </div>
                 </div>
@@ -203,8 +215,9 @@
                         <ul>
                             <li><a href="#">Our Story</a></li>
                             <li><a href="./contact.html">Packaging</li>
-                            <li><a href="#">Terms of Service</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
+                            <li><a href="./TermsOfUsePolicy.html">Terms of Use</a></li>
+                            <li><a href="./TermsofSalePolicy.html">Terms of Sale</a></li>
+                            <li><a href="./PrivacyPolicy.html">Privacy Policy</a></li>
                         </ul>
                     </div>
                 </div>
@@ -212,11 +225,11 @@
                     <div class="footer-widget">
                         <h5>Customer Service</h5>
                         <ul>
-                            <li><a href="./contact.html">Contact</li>
+                            <li><a href="./contact.html">Contact Us</li>
                             <li><a href="#">Covid-19</a></li>
                             <li><a href="./faq.html">FAQ</a></li>
-                            <li><a href="#">Delivery</a></li>
-                            <li><a href="#">Returns</a></li>
+                            <li><a href="./faq.html">Delivery</a></li>
+                            <li><a href="./faq.html">Returns</a></li>
                         </ul>
                     </div>
                 </div>
@@ -237,7 +250,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="copyright-text">
-                            Copyright &copy; <script>document.write(new Date().getFullYear());</script> Lashae Glamour
+                            Copyright &copy; <script>document.write(new Date().getFullYear());</script> Lashaè Glamour
                         </div>
                         <div class="payment-pic">
                             <img src="img/payment-method.png" alt="">
@@ -249,8 +262,17 @@
     </footer>
     <!-- Footer Section End -->
 
-    <!-- Js Plugins -->
+    <!-- TrustPilot Plugins -->
+    <script>
+        (function(w,d,s,r,n){w.TrustpilotObject=n;w[n]=w[n]||function(){(w[n].q=w[n].q||[]).push(arguments)};
+            a=d.createElement(s);a.async=1;a.src=r;a.type='text/java'+s;f=d.getElementsByTagName(s)[0];
+            f.parentNode.insertBefore(a,f)})(window,document,'script', 'https://invitejs.trustpilot.com/tp.min.js', 'tp');
+            tp('register', 'p7USu7LzBr8GmK04');
+    </script>
+    <!-- Klaviyo Plugins -->
     <script async type="text/javascript" src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=XTZXGN"></script>
+    
+    <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
