--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <ul>
                         <li><a href="./ready-to-ship.html">Ready to Ship</a></li>
                         <li><a href="./made-to-order.html">Made to Order</a></li>
-                        <li><a href="./custom-orders.html">Custom Orders</a></li>
+                        <li><a href="./custom-sets.html">Custom Sets</a></li>
                         <li><a href="./faq.html">FAQ</a></li>
                         <li><a href="./contact.html">Contact</a></li>
                             </ul>
@@ -291,16 +291,16 @@
                             <div class="pi-pic">
                                 <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-430458057" itemscope itemtype="http://schema.org/Product" data-single-product-id="430458057"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="Matriarch"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="29.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
                             </a>
-                            </div>
-
                         </div>
+
+            </div>
                         <div class="product-item">
                             <a href="./Product_Pages/striped-feline.html">
                             <div class="pi-pic">
                                 <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-430681091" itemscope itemtype="http://schema.org/Product" data-single-product-id="430681091"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="Striped Feline"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="28.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
                             </a>
-                            </div>
                         </div>
+        </div>
                     </div>
                 </div>
                 <div class="col-lg-3 offset-lg-1">
