--- a/made-to-order.html
+++ b/made-to-order.html
@@ -9,9 +9,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Made To Order | Lashaè Glamour</title>
 
-    <!-- Pinterest -->
-    <meta name="p:domain_verify" content="7af778428330efb5ade5debafd102a0c"/>
-
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
@@ -119,7 +116,7 @@
                     <ul>
                         <li><a href="./ready-to-ship.html">Ready to Ship</a></li>
                         <li><a href="./made-to-order.html">Made to Order</a></li>
-                        <li><a href="./custom-orders.html">Custom Orders</a></li>
+                        <li><a href="./custom-sets.html">Custom Sets</a></li>
                         <li><a href="./faq.html">FAQ</a></li>
                         <li><a href="./contact.html">Contact</a></li>
                             </ul>
@@ -231,15 +228,17 @@
                                     </a>
                                 </div>
                             </div>
+                            <!--
                             <div class="col-lg-4 col-sm-6">
                                 <div class="product-item">
                                     <a href="./product.html">
                                     <div class="pi-pic">
-                                        <!-- Ecwid watercolour -->
+                                        *Ecwid product button*
                                     </div>
                                     </a>
                                 </div>
                             </div>
+                            -->
                         </div>
                     </div>
                 </div>
@@ -318,7 +317,7 @@
         </div>
     </footer>
     <!-- Footer Section End -->
-
+    
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
