--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                             </a>
                         </div>
                         <div class="product-item">
-                            <a href="./Product_Pages/tartan-nails">
+                            <a href="./Product_Pages/tartan-nails.html">
                             <div class="pi-pic">
                                 <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-463713010" itemscope itemtype="http://schema.org/Product" data-single-product-id="463713010"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="Tartan Nails"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="27.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
                             </div>
@@ -247,9 +247,9 @@
                             </div>
                     </div>
                         <div class="product-item">
-                            <a href="./Product_Pages/matte-leopard">
+                            <a href="./Product_Pages/solid-colour-nails.html">
                             <div class="pi-pic">
-                                <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-463481028" itemscope itemtype="http://schema.org/Product" data-single-product-id="463481028"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="Matte Leopard"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="27.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
+                                <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-425158446" itemscope itemtype="http://schema.org/Product" data-single-product-id="425158446"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="Solid Colour Nails"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="24.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
                             </a>
                         </div>
                         </div>
