--- a/index.html
+++ b/index.html
@@ -321,13 +321,13 @@
         <div class="insta-item set-bg" data-setbg="img/insta-1.jpg">
             <div class="inside-text">
                 <i class="ti-instagram"></i>
-                <h5><a href="#">Lashaè Glamour</a></h5>
+                <h5><a href="https://www.instagram.com/p/CZUC3w7IiIZ/">Lashaè Glamour</a></h5>
             </div>
         </div>
         <div class="insta-item set-bg" data-setbg="img/insta-2.jpg">
             <div class="inside-text">
                 <i class="ti-instagram"></i>
-                <h5><a href="#">Lashaè Glamour</a></h5>
+                <h5><a href="https://www.instagram.com/p/CYV0Z40qw5Y/">Lashaè Glamour</a></h5>
             </div>
         </div>
         <div class="insta-item set-bg" data-setbg="img/insta-3.jpg">
