--- a/faq.html
+++ b/faq.html
@@ -356,12 +356,12 @@
                 <div class="col-lg-3">
                     <div class="footer-left">
                         <div class="footer-logo">
-                            <a href="#"><img src="img/footer-logo.png" alt=""></a>
+                            <a href="./index.html"><img src="img/footer-logo.png" alt="Lashae Glamour Logo"></a>
                         </div>
                         <div class="footer-social">
-                            <a href="#"><i class="ti-instagram"></i></a>
-                            <a href="#"><i class="fab fa-tiktok"></i></a>
-                            <a href="#"><i class="ti-pinterest"></i></a>
+                            <a href="https://www.instagram.com/lashaeglamour" target="_blank" rel="noopener noreferrer"><i class="ti-instagram"></i></a>
+                            <a href="https://www.tiktok.com/@lashaeglamour" target="_blank" rel="noopener noreferrer"><i class="fab fa-tiktok"></i></a>
+                            <a href="http://www.pinterest.com/lashaeglamour" target="_blank" rel="noopener noreferrer"><i class="ti-pinterest"></i></a>
                             <!-- <a href="#"><i class="ti-facebook"></i></a>
                             <a href="#"><i class="ti-twitter-alt"></i></a> -->
                         </div>
@@ -371,11 +371,11 @@
                     <div class="footer-widget">
                         <h5>About Us</h5>
                         <ul>
-                            <li><a href="#">Our Story</a></li>
-                            <li><a href="./contact.html">Packaging</li>
-                            <li><a href="./TermsOfUsePolicy.html">Terms of Use</a></li>
-                            <li><a href="./TermsofSalePolicy.html">Terms of Sale</a></li>
-                            <li><a href="./PrivacyPolicy.html">Privacy Policy</a></li>
+                            <li><a href="./lsglm-story.html">Our Story</a></li>
+                            <li><a href="./packaging.html">Packaging</li>
+                            <li><a href="./Legal_Docs/terms-of-use-policy.html">Terms of Use</a></li>
+                            <li><a href="./Legal_Docs/terms-of-sale-policy.html">Terms of Sale</a></li>
+                            <li><a href="./Legal_Docs/privacy-policy.html">Privacy Policy</a></li>
                         </ul>
                     </div>
                 </div>
@@ -384,7 +384,7 @@
                         <h5>Customer Service</h5>
                         <ul>
                             <li><a href="./contact.html">Contact Us</li>
-                            <li><a href="#">Covid-19</a></li>
+                            <li><a href="./Legal_Docs/covid-policy.html">Covid-19</a></li>
                             <li><a href="./faq.html">FAQ</a></li>
                             <li><a href="./faq.html">Delivery</a></li>
                             <li><a href="./faq.html">Returns</a></li>
