--- a/index.html
+++ b/index.html
@@ -333,25 +333,25 @@
         <div class="insta-item set-bg" data-setbg="img/insta-3.jpg">
             <div class="inside-text">
                 <i class="ti-instagram"></i>
-                <h5><a href="#">Lashaè Glamour</a></h5>
+                <h5><a href="https://www.instagram.com/lashaeglamour/">Lashaè Glamour</a></h5>
             </div>
         </div>
         <div class="insta-item set-bg" data-setbg="img/insta-4.jpg">
             <div class="inside-text">
                 <i class="ti-instagram"></i>
-                <h5><a href="#">Lashaè Glamour</a></h5>
+                <h5><a href="https://www.instagram.com/lashaeglamour/">Lashaè Glamour</a></h5>
             </div>
         </div>
         <div class="insta-item set-bg" data-setbg="img/insta-5.jpg">
             <div class="inside-text">
                 <i class="ti-instagram"></i>
-                <h5><a href="#">Lashaè Glamour</a></h5>
+                <h5><a href="https://www.instagram.com/lashaeglamour/">Lashaè Glamour</a></h5>
             </div>
         </div>
         <div class="insta-item set-bg" data-setbg="img/insta-6.jpg">
             <div class="inside-text">
                 <i class="ti-instagram"></i>
-                <h5><a href="#">Lashaè Glamour</a></h5>
+                <h5><a href="https://www.instagram.com/lashaeglamour/">Lashaè Glamour</a></h5>
             </div>
         </div>
     </div>
@@ -364,12 +364,12 @@
                 <div class="col-lg-3">
                     <div class="footer-left">
                         <div class="footer-logo">
-                            <a href="#"><img src="img/footer-logo.png" alt=""></a>
+                            <a href="./index.html"><img src="img/footer-logo.png" alt="Lashae Glamour Logo"></a>
                         </div>
                         <div class="footer-social">
-                            <a href="#"><i class="ti-instagram"></i></a>
-                            <a href="#"><i class="fab fa-tiktok"></i></a>
-                            <a href="#"><i class="ti-pinterest"></i></a>
+                            <a href="https://www.instagram.com/lashaeglamour" target="_blank" rel="noopener noreferrer"><i class="ti-instagram"></i></a>
+                            <a href="https://www.tiktok.com/@lashaeglamour" target="_blank" rel="noopener noreferrer"><i class="fab fa-tiktok"></i></a>
+                            <a href="http://www.pinterest.com/lashaeglamour" target="_blank" rel="noopener noreferrer"><i class="ti-pinterest"></i></a>
                             <!-- <a href="#"><i class="ti-facebook"></i></a>
                             <a href="#"><i class="ti-twitter-alt"></i></a> -->
                         </div>
@@ -379,11 +379,11 @@
                     <div class="footer-widget">
                         <h5>About Us</h5>
                         <ul>
-                            <li><a href="#">Our Story</a></li>
-                            <li><a href="./contact.html">Packaging</li>
-                            <li><a href="./TermsOfUsePolicy.html">Terms of Use</a></li>
-                            <li><a href="./TermsofSalePolicy.html">Terms of Sale</a></li>
-                            <li><a href="./PrivacyPolicy.html">Privacy Policy</a></li>
+                            <li><a href="./lsglm-story.html">Our Story</a></li>
+                            <li><a href="./packaging.html">Packaging</li>
+                            <li><a href="./Legal_Docs/terms-of-use-policy.html">Terms of Use</a></li>
+                            <li><a href="./Legal_Docs/terms-of-sale-policy.html">Terms of Sale</a></li>
+                            <li><a href="./Legal_Docs/privacy-policy.html">Privacy Policy</a></li>
                         </ul>
                     </div>
                 </div>
@@ -392,7 +392,7 @@
                         <h5>Customer Service</h5>
                         <ul>
                             <li><a href="./contact.html">Contact Us</li>
-                            <li><a href="#">Covid-19</a></li>
+                            <li><a href="./Legal_Docs/covid-policy.html">Covid-19</a></li>
                             <li><a href="./faq.html">FAQ</a></li>
                             <li><a href="./faq.html">Delivery</a></li>
                             <li><a href="./faq.html">Returns</a></li>
